--- a/diep_frontend/package.json
+++ b/diep_frontend/package.json
@@ -14,8 +14,12 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.58.1",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "sass": "^1.58.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@types/uuid": "^8.3.1",
+    "uuid": "^8.3.2"
   }
 }
